# Booking_system

./: .env.example  .gitignore  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
frontend/: Dockerfile
